--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,17 @@
       "target": "ES2020",
       "module": "commonjs",
       "lib": ["DOM", "DOM.Iterable", "ESNext"],
-      "jsx": "react-jsx",
-      "strict": true,
-      "esModuleInterop": true,
+      "allowJs": true,
       "skipLibCheck": true,
+      "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
+      "strict": true,
       "forceConsistentCasingInFileNames": true,
+      "noFallthroughCasesInSwitch": true,
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "noEmit": true,
+      "jsx": "react-jsx",
       "baseUrl": ".",
       "paths": {
         "@/*": ["./src/*"]
