--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "license": "MIT",
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "@uiw/react-md-editor": "^4.0.5",
     "chokidar": "^4.0.3",
     "electron-squirrel-startup": "^1.0.1",
     "jotai": "^2.12.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "simple-git": "^3.27.0"
   },
   "devDependencies": {
@@ -38,6 +40,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.7.0",
     "@electron-forge/plugin-fuses": "^7.7.0",
     "@electron/fuses": "^1.8.0",
+    "@electron/typescript-definitions": "^9.1.2",
     "@types/electron": "^1.4.38",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.10",
